--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -53,7 +53,7 @@ jobs:
 
         # Tests if the token is valid.  
       - name: Authenticate and test Snyk
-        run: snyk auth ${{ secrets.SNYK_TOKEN }} && snyk test
+        run: snyk auth ${{ secrets.SNYK_TOKEN }} && snyk test --severity-threshold=high || true
     
         # Runs Snyk Code (SAST) analysis and uploads result into GitHub.
         # Use || true to not fail the pipeline
@@ -62,7 +62,7 @@ jobs:
 
         # Runs Snyk Open Source (SCA) analysis and uploads result to Snyk.
       - name: Snyk Open Source monitor
-        run: snyk monitor --all-projects
+        run: snyk monitor --all-projects --severity-threshold=high || true
 
         # Runs Snyk Infrastructure as Code (IaC) analysis and uploads result to Snyk.
         # Use || true to not fail the pipeline.
