--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
     "seed:employees": "node scripts/seedEmployees.js"
   },
   "dependencies": {
+    "@sentry/angular": "^8.37.1",
+    "@sentry/tracing": "^7.114.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -19,7 +21,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.2",
     "morgan": "^1.10.0",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "connect-mongo": "^5.1.0",
+    "dompurify": "^3.0.8",
+    "jsdom": "^24.0.0",
+    "express-session": "^1.18.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
