--- a/.github/workflows/snyk-security.yml
+++ b/.github/workflows/snyk-security.yml
@@ -23,7 +23,8 @@ on:
     branches: ["master" ]
   pull_request:
     branches: ["master"]
-
+  workflow_dispatch:
+  
 permissions:
   contents: read
 
