--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:backend": "cd backend && npm start",
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
     "build": "cd frontend && npm run build",
-    "test": "concurrently \"cd frontend && npm test\" \"cd backend && npm test\""
+    "test": "concurrently \"cd frontend && npm test\" \"cd backend && npm test\"",
+    "lint": "ng lint"
   },
   "private": true,
   "devDependencies": {
