--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "install:all": "npm install && cd frontend && npm install && cd ../backend && npm install",
     "build": "cd frontend && npm run build",
     "test": "concurrently \"cd frontend && npm test\" \"cd backend && npm test\"",
-    "lint": "ng lint"
+    "lint": "node_modules/.bin/ng lint"
   },
   "private": true,
   "devDependencies": {
